# snek

./: CLAUDE.md  README.md  pyproject.toml
src/snek/: app.py  cli.py  colors.py  config.py  constants.py  demo_ai.py  game.py  game_rules.py  screens.py  state_manager.py  styles.css  themes.py  unicode_journey.py
tests/: conftest.py  fixtures.py  test_app.py  test_color_validation.py  test_demo_mode.py  test_game.py  test_game_rules.py  test_state_manager.py  test_themes.py  test_unicode_journey.py  test_unicode_width.py
