[project]
name = "snek-tui"
version = "0.1.1"
authors = [
    {name = "Ned Letcher"},
]
description = "A terminal-based Snake game built with Textual"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
license-files = ["LICENSE"]
keywords = ["snake", "game", "terminal", "tui", "textual"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Arcade",
]
dependencies = [
    "textual>=5.0.1",
    "textual-pyfiglet>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/nedned/snek"
Repository = "https://github.com/nedned/snek"
Issues = "https://github.com/nedned/snek/issues"

[project.scripts]
snek = "snek.cli:main"
snek-tui = "snek.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.9",
    "textual-dev>=1.7.0",
    "coverage[toml]>=7.0.0",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snek"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"